argocd/applications/prod-ops/cluster-resources/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: argocd-ops.talentos.darey.io
    external-dns.alpha.kubernetes.io/manage: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd-ops.talentos.darey.io
      secretName: argocd-server-tls
  rules:
    - host: argocd-ops.talentos.darey.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
