argocd/applications/prod-ops/cluster-resources/thanos-query-internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-query-internal
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - thanos-query-ops.internal.talentos.darey.io
      secretName: thanos-query-internal-tls
  rules:
    - host: thanos-query-ops.internal.talentos.darey.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thanos-query
                port:
                  number: 10902
                  # Note: Bitnami chart creates service as 'thanos-query'
